Run grammar check on docs

--- a/examples/notebooks/Country Names.ipynb
+++ b/examples/notebooks/Country Names.ipynb
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Repair Contry Name Outliers in ITU ICT Development Index (IDI)"
+    "## Repair Country Name Outliers in ITU ICT Development Index (IDI)"
    ]
   },
   {
@@ -305,7 +305,7 @@
     "from openclean.data.util import repair_mapping\n",
     "\n",
     "# Create a dictionary that maps the 'unknown' country names from the IDI dataset to the respective\n",
-    "# ground truth name based on the contry code.\n",
+    "# ground truth name based on the country code.\n",
     "\n",
     "df = pd.merge(idi, countries, left_on='country_id', right_on='alpha3Code')\n",
     "lookup = repair_mapping(df, key='country_name', value='name')\n",
